--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <meta http-equiv="refresh" content="600">
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaQuery.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Silkscreen&display=swap" rel="stylesheet">
     <title>Conversor | BINOCT</title>
     <script src="./conversorDecimal.js" defer></script>
 </head>
 <body>
     <header class="cabecalho">
-        <div class="primario">
+        <div>
             <h1 class="titulo">Sejam Bem Vindos ao Conversor BINOCT </h1>
             <h2 class="subtitulo">Conversor de Números Decimais para Binários ou <span class="oitoBits">Octais</span></h2>
         </div>
@@ -73,8 +74,8 @@
                 &copy; Developed by Marcelo Gomes de Abreu Olivera <br>
                 RA: 3022107357
             </h3>
-            <address>
-                <a class="mail" href="mailto:marcelo.gomes.oliveira97@uni9.edu.br">marcelo.gomes.oliveira97@uni9.edu.br</a>
+            <address class="endereco">
+                <a class="mail" href="mailto:marcelo.gomes.oliveira97@uni9.edu.br"><img class="icone" src="./img/mail.png" alt="icone de email"> marcelo.gomes.oliveira97@uni9.edu.br</a>
             </address>
         </div>
     </footer>
