--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <img class="imgAside" src="./img/tunel-binary.jpg" alt="ilustração de um tunel formado por numeros binários, zeros e uns">
                     <figcaption class="legendaImg">Tunel Binário</figcaption>
                 </figure>
-                <p class="paragAside">Segundo o site Tecmundo (2022), o alemão Gottfried Leibniz inventou os números binários da maneira como utilizamos hoje no século 18! No entanto foi descoberto por pesquisadores da Universidade de Bergen (Noruega) que o sistema binário já era utilizado 400 anos antes!</p>
+                <p class="paragAside">Segundo o site Tecmundo (2013), o alemão Gottfried Leibniz inventou os números binários da maneira como utilizamos hoje no século 18! No entanto foi descoberto por pesquisadores da Universidade de Bergen (Noruega) que o sistema binário já era utilizado 400 anos antes! <br>(Endereço da matéria logo abaixo)</p>
+                <a href="https://www.tecmundo.com.br/matematica/48377-numeros-binarios-polinesios-ja-utilizavam-este-sistema-ha-600-anos.htm#:~:text=Os%20n%C3%BAmeros%20bin%C3%A1rios%20como%20s%C3%A3o,anos%20do%20que%20era%20afirmado." class="refer" target="_blank"><span class="referSite">TECMUNDO <br>Números binários: polinésios já utilizavam este sistema há 600 anos</a>
             </aside>
         </section>
         <section class="secaoPrincipal"> <!-- Seção Principal - Navegação e Formulários-->
