--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaQuery.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Silkscreen&display=swap" rel="stylesheet">
-    <title>Conversor | DecBin - DecOct</title>
+    <title>Conversor | BINOCT</title>
     <script src="./conversorDecimal.js" defer></script>
 </head>
 <body>
     <header class="cabecalho">
         <div>
-            <h1 class="titulo">Sejam Bem Vindos ao Conversor DECBIN - DECOCT </h1>
+            <h1 class="titulo">Sejam Bem Vindos ao Conversor BINOCT </h1>
             <h2 class="subtitulo">Conversor de Números Decimais para Binários ou <span class="oitoBits">Octais</span></h2>
         </div>
     </header>
