Ajustando na pasta

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Marcelo Oliveira">
     <meta http-equiv="refresh" content="600">
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaQuery.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mediaQuery.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Silkscreen&display=swap" rel="stylesheet">
     <title>Conversor | BINOCT</title>
-    <script src="./conversorDecimal.js" defer></script>
+    <script src="./js/conversorDecimal.js" defer></script>
 </head>
 <body>
     <header class="cabecalho">
@@ -76,7 +76,7 @@
                 RA: 3022107357
             </h3>
             <address class="endereco">
-                <a class="mail" href="mailto:marcelo.gomes.oliveira97@uni9.edu.br"><img class="icone" src="./img/mail.png" alt="icone de email"> marcelo.gomes.oliveira97@uni9.edu.br</a>
+                <a class="mail" href="mailto:marcelo.gomes.oliveira97@uni9.edu.br"><img class="icone" src="./img/mail.png" alt="icone de email, carta"> marcelo.gomes.oliveira97@uni9.edu.br</a>
             </address>
         </div>
     </footer>
