--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <footer class="rodape">
         <div class="rodapeTexto">
             <p class="descricaoRodape">
-                Disciplina de Tecnologia em Análise e Desenvolvimento de Sistemas
+                Curso: Tecnologia em Análise e Desenvolvimento de Sistemas<br>
+                Matéria: Desenvolvimento para Internet
             </p>
             <h3>
                 &copy; Developed by Marcelo Gomes de Abreu Olivera <br>
