--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 Matéria: Desenvolvimento para Internet
             </p>
             <h3>
-                &copy; Developed by Marcelo Gomes de Abreu Olivera <br>
+                2022 &copy; Developed by Marcelo Gomes de Abreu Olivera <br>
                 RA: 3022107357
             </h3>
             <address class="endereco">
